# loyalty

./: .gitignore  LICENSE  README.md  docker-compose.yml  loyalty.cabal  stack.yaml
nginx/: nginx.conf
src/: Api.hs  App.hs  LoyaltyServer.hs
src/Data/: Api.hs  Loyalty.hs  Purchase.hs
