name:                loyalty
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oxidpion/loyalty#readme
license:             BSD3
license-file:        LICENSE
author:              Damir
maintainer:          damirm@list.ru
copyright:           2018 Damir
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable loyalty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , loyalty
  default-language:    Haskell2010

test-suite loyalty-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , loyalty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oxidpion/loyalty
